# SIK_big_2019

./: CMakeLists.txt  makefile
client/: main.c
server/: main.c
utils/: args_utils.c  args_utils.h  command_utils.c  command_utils.h  connection_utils.c  connection_utils.h  err.c  err.h  file_utils.c  file_utils.h  types.h  user_input_output.c  user_input_output.h
